--- a/herrmiddag/src/index.css
+++ b/herrmiddag/src/index.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&family=Imperial+Script&family=Tangerine:wght@400;700&display=swap');
 
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: antiquewhite;
 }
 
 code {
