--- a/herrmiddag/src/components/header/header.css
+++ b/herrmiddag/src/components/header/header.css
@@ -1,4 +1,3 @@
-
 nav{
     display: flex;
     flex-direction: column;
@@ -6,6 +5,7 @@ nav{
     background-color: antiquewhite;
     position: sticky;
     top: 0px;
+    min-height: 75px;
 }
 
 .title{
