--- a/herrmiddag/src/components/main/main.css
+++ b/herrmiddag/src/components/main/main.css
@@ -2,6 +2,10 @@ main {
 	text-align: center;
 }
 
+p{
+	font-size: 1.4rem;
+}
+
 h2 {
 	font-family: "Imperial Script";
 	font-size: 2.5rem;
@@ -12,6 +16,19 @@ h3{
     font-size: 2rem;
 }
 
+h4{
+	font-family: "Tangerine";
+	font-weight: 700;
+	font-size: 1.7rem;
+}
+
 section {
-	padding: 20px 15px;
+	padding: 20px 15%;
+}
+
+
+.linje{
+    border-top: solid  0.5px;
+    margin-top: 15px;
+    padding-top: 15px;
 }
