--- a/herrmiddag/src/components/header/header.css
+++ b/herrmiddag/src/components/header/header.css
@@ -1,26 +1,54 @@
-nav{
-    display: flex;
-    flex-direction: column;
-    padding-block: 5px;
-    background-color: antiquewhite;
-    position: sticky;
-    top: 0px;
-    min-height: 75px;
+:root{
+    --shadow: #2d2b2b4a;
 }
 
-.title{
-    font-size: 2.2rem;
-    text-align: center;
+nav {
+	display: flex;
+	flex-direction: column;
+	padding-block: 5px;
+	background-color: antiquewhite;
+	position: sticky;
+	top: 0px;
+	min-height: 75px;
+	-webkit-box-shadow: 0px 4px 5px 0px var(--shadow);
+	-moz-box-shadow: 0px 4px 5px 0px var(--shadow);
+	box-shadow: 0px 4px 5px 0px var(--shadow);
 }
 
-ul{
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-    font-size: 1.3rem;
-    font-family: "Imperial Script", serif;
+.title {
+	font-size: 2.2rem;
+	text-align: center;
+    transition-duration: 0.3s;
 }
 
-a{
-    color: black;
+.links {
+	display: flex;
+	justify-content: space-evenly;
+	list-style-type: none;
+	font-size: 1.3rem;
+	font-family: "Imperial Script", serif;
+    transition-duration: 0.3s;
+}
+
+a {
+    transition-duration: 0.3s;
+	color: black;
+}
+
+@media (min-width: 400px){
+	.title{
+        font-size: 2.5rem;
+    }
+    .links{
+        font-size: 1.8rem;
+    }
+}
+
+@media (min-width: 800px){
+	.title{
+        font-size: 3.5rem;
+    }
+    .links{
+        font-size: 2.5rem;
+    }
 }
