--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -18,7 +18,7 @@ nav {
 .title {
 	font-size: 2.2rem;
 	text-align: center;
-    transition-duration: 0.3s;
+    transition-duration: 3ms;
 }
 
 .links {
