--- a/herrmiddag/herrmiddag/src/components/header/header.css
+++ b/herrmiddag/herrmiddag/src/components/header/header.css
@@ -18,7 +18,7 @@ nav {
 .title {
 	font-size: 2.2rem;
 	text-align: center;
-    transition-duration: 3ms;
+    transition-duration: 0.3s;
 }
 
 .links {
@@ -33,8 +33,6 @@ nav {
 a {
     transition-duration: 0.3s;
 	color: black;
-	text-decoration-line: underline;
-	text-decoration-thickness: 1px;
 }
 
 @media (min-width: 400px){
